terraform/modules/kubernetes-config/ingress.yaml
# Set up Traefik routers and services
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: applications
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: clusterissuer
spec:
  rules:
    - host: test-subdomain-1.prototyping.quest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 80
  tls:
    - secretName: web-service-cert
      hosts:
        - test-subdomain-1.prototyping.quest
